Removed Bootstrap functionality

--- a/galleryTester.html
+++ b/galleryTester.html
@@ -14,8 +14,6 @@
 
     <title>Elgerts Woodburning</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="stylesheet.css" rel="stylesheet" />
     <script src="index.js" defer> </script>
     <script src="calendar.js" defer></script>
@@ -27,7 +25,7 @@
             <li><a href="index.html">Home</a></li>
             <li> <a href="gallery.html">Gallery</a></li>
             <li style="float:right"><a href="about.html">About</a></li>
-            <li> <a class="active" href="galleryTester.html">Gallery Tester</a></li>
+            <li> <a class="active" href="galleryTester.html">Gallery Test</a></li>
         </ul>
     </div>
     <h1>Elgert's Gallery</h1>
